--- a/azaleia.html
+++ b/azaleia.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Forminhas em tecido, Forminhas para doces finos, Forminhas para eventos">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Gilberto Valente">
-    <link rel="stylesheet" type="text/css" href="_css/reset.css">
-    <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
@@ -19,25 +19,25 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <img src="_imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
-        <img src="_imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
-        <nav>
-            <ul class="center menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Empresa</a>
-                    <ul>
-                        <li><a href="trabalhamos.html">Como trabalhamos</a></li>
-                        <li><a href="historia.html">Um pouquinho de nós</a></li>
-                    </ul>
-                </li>
-                <li><a href="modelos.html">Modelos</a></li>
-                <li><a href="cores.html">Cores</a></li>
-                <li><a href="eventos.html">Eventos</a></li>
-                <li><a href="fale-conosco.html">Contato</a></li>
-            </ul>
-        </nav>
+        <img src="imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
+        <img src="imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
     </header>
 
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Empresa</a>
+                <ul>
+                    <li><a href="trabalhamos.html">Como trabalhamos</a></li>
+                    <li><a href="historia.html">Um pouquinho de nós</a></li>
+                </ul>
+            </li>
+            <li><a href="modelos.html">Modelos</a></li>
+            <li><a href="cores.html">Cores</a></li>
+            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="fale-conosco.html">Contato</a></li>
+        </ul>
+    </nav>
     <!-- ARTIGOS -->
 
 
@@ -46,7 +46,7 @@
 
     <footer>
         <div class="rodape">
-            <img src="_imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
+            <img src="imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
             <p>Copyright &copy; 2020 - by Cristina Valente </p>
             <ul class="social">
                 <li><a href="http://facebook.com/cristinavalente.flores" target="_blank"> Facebook</a></li>
