--- a/fotos.html
+++ b/fotos.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Forminhas em tecido, Forminhas para doces finos, Forminhas para eventos">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Gilberto Valente">
-    <link rel="stylesheet" type="text/css" href="_css/reset.css">
-    <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
@@ -19,8 +19,8 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <img src="_imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
-        <img src="_imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
+        <img src="imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
+        <img src="imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
         <nav>
             <ul class="center menu">
                 <li><a href="index.html">Home</a></li>
@@ -46,7 +46,7 @@
 
     <footer>
         <div class="rodape">
-            <img src="_imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
+            <img src="imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
             <p>Copyright &copy; 2020 - by Cristina Valente </p>
             <ul class="social">
                 <li><a href="http://facebook.com/cristinavalente.flores" target="_blank"> Facebook</a></li>
