--- a/modelos.html
+++ b/modelos.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Forminhas em tecido, Forminhas para doces finos, Forminhas para eventos">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Gilberto Valente">
-    <link rel="stylesheet" type="text/css" href="_css/reset.css">
-    <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
@@ -19,8 +19,8 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <img src="_imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
-        <img src="_imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
+        <img src="imagens/titulo-original-720-136.png" alt="Cristina Valente Flores" class="center">
+        <img src="imagens/casamento-danielle-720-413-original.jpg" alt="Casamento Danielle" class="center">
         <nav>
             <ul class="center menu">
                 <li><a href="index.html">Home</a></li>
@@ -52,7 +52,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a01-azaleia-cetim-rose.jpg" alt="miniatura1">
+                            <img src="imagens/a01-azaleia-cetim-rose.jpg" alt="miniatura1">
                             <figcaption>A01 Azaléia cetim rosé</figcaption>
                         </figure>
                     </a>
@@ -62,7 +62,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a02-azaleia-cetim-branca.jpg" alt="miniatura2">
+                            <img src="imagens/a02-azaleia-cetim-branca.jpg" alt="miniatura2">
                             <figcaption>A02 Azaléia cetim branca</figcaption>
                         </figure>
                     </a>
@@ -72,7 +72,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a03-azaleia-cetim-marsala.jpg" alt="miniatura3">
+                            <img src="imagens/a03-azaleia-cetim-marsala.jpg" alt="miniatura3">
                             <figcaption>A03 Azaleia cetim marsala</figcaption>
                         </figure>
                     </a>
@@ -82,7 +82,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a14-azaleia-voil-branca.jpg" alt="miniatura4">
+                            <img src="imagens/a14-azaleia-voil-branca.jpg" alt="miniatura4">
                             <figcaption>A14 Azaléia voil branca</figcaption>
                         </figure>
                     </a>
@@ -92,7 +92,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a12-azaleia-voil-laranja.jpg" alt="miniatura5">
+                            <img src="imagens/a12-azaleia-voil-laranja.jpg" alt="miniatura5">
                             <figcaption>A12 Azaléia voil laranja</figcaption>
                         </figure>
                     </a>
@@ -102,7 +102,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/a11-azaleia-voil-azul.jpg" alt="miniatura6">
+                            <img src="imagens/a11-azaleia-voil-azul.jpg" alt="miniatura6">
                             <figcaption>A11 Azaléia voil azul</figcaption>
                         </figure>
                     </a>
@@ -112,7 +112,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/f01-flor-lotus-rosa.jpg" alt="miniatura7">
+                            <img src="imagens/f01-flor-lotus-rosa.jpg" alt="miniatura7">
                             <figcaption>F01 Flor de Lotus rosa</figcaption>
                         </figure>
                     </a>
@@ -122,7 +122,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/f02-flor-lotus-marsala.jpg" alt="miniatura8">
+                            <img src="imagens/f02-flor-lotus-marsala.jpg" alt="miniatura8">
                             <figcaption>F04 Flor de Lotus vinho</figcaption>
                         </figure>
                     </a>
@@ -132,7 +132,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/f04-flor-lotus-azul.jpg" alt="miniatura8">
+                            <img src="imagens/f04-flor-lotus-azul.jpg" alt="miniatura8">
                             <figcaption>F04 Flor de Lotus azul</figcaption>
                         </figure>
                     </a>
@@ -148,7 +148,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r01-rosa-branca.jpg" alt="miniatura1">
+                            <img src="imagens/r01-rosa-branca.jpg" alt="miniatura1">
                             <figcaption>R01 Rosa branca</figcaption>
                         </figure>
                     </a>
@@ -158,7 +158,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r05-rosa-amarela.jpg" alt="miniatura2">
+                            <img src="imagens/r05-rosa-amarela.jpg" alt="miniatura2">
                             <figcaption>R05 Rosa amarela</figcaption>
                         </figure>
                     </a>
@@ -168,7 +168,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r13-rosa-marsala.jpg" alt="miniatura3">
+                            <img src="imagens/r13-rosa-marsala.jpg" alt="miniatura3">
                             <figcaption>R13 Rosa marsala</figcaption>
                         </figure>
                     </a>
@@ -178,7 +178,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r28-rosa-azul-royal.jpg" alt="miniatura4">
+                            <img src="imagens/r28-rosa-azul-royal.jpg" alt="miniatura4">
                             <figcaption>R28 Rosa azul Royal</figcaption>
                         </figure>
                     </a>
@@ -188,7 +188,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r02-rosa-marfim.jpg" alt="miniatura5">
+                            <img src="imagens/r02-rosa-marfim.jpg" alt="miniatura5">
                             <figcaption>R02 Rosa marfim</figcaption>
                         </figure>
                     </a>
@@ -198,7 +198,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r14-rosa rosa bebê.jpg" alt="miniatura6">
+                            <img src="imagens/r14-rosa rosa bebê.jpg" alt="miniatura6">
                             <figcaption>R14 Rosa rosa bebê</figcaption>
                         </figure>
                     </a>
@@ -208,7 +208,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r07-rosa-laranja.jpg" alt="miniatura7">
+                            <img src="imagens/r07-rosa-laranja.jpg" alt="miniatura7">
                             <figcaption>R07 Rosa laranja</figcaption>
                         </figure>
                     </a>
@@ -218,7 +218,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r17-rosa-rose.jpg" alt="miniatura8">
+                            <img src="imagens/r17-rosa-rose.jpg" alt="miniatura8">
                             <figcaption>R17 Rosa rosé</figcaption>
                         </figure>
                     </a>
@@ -228,7 +228,7 @@
                 <li>
                     <a href="produto.html">
                         <figure>
-                            <img src="_imagens/r32-rosa-lilas.jpg" alt="miniatura9">
+                            <img src="imagens/r32-rosa-lilas.jpg" alt="miniatura9">
                             <figcaption>R17 Rosa lilás</figcaption>
                         </figure>
                     </a>
@@ -388,7 +388,7 @@
 
     <footer>
         <div class="rodape">
-            <img src="_imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
+            <img src="imagens/logo_rosa_rosa_pink_50_42.png" alt="Logo Cristina Valente">
             <p>Copyright &copy; 2020 - by Cristina Valente </p>
             <ul class="social">
                 <li><a href="http://facebook.com/cristinavalente.flores" target="_blank"> Facebook</a></li>
