Testando forminhas modificadas pela Cristina na pasta CORES. 19/10/2020

--- a/cores.html
+++ b/cores.html
@@ -40,6 +40,204 @@
         </header>
 
         <!-- ARTIGOS -->
+        <!--    div/container/paineis sem utilidade no momento  -->
+        <div class="paineis">
+            <!--	os	paineis	de	novidades	e	mais	vendidos	entrarão	aqui	dentro	-->
+            <!--	painel novidades	-->
+            <section class="painel novidades">
+                <h2> <span style="vertical-align: 0.3em;">Linha Elegance</span></h2>
+                <ul>
+                    <!--	primeiro	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/rosa-branca-T.png" alt="miniatura1">
+                                <figcaption>Rosa branca</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	primeiro	produto	-->
+                    <!--	segundo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa-lilás-violeta-DT.png" alt="miniatura2">
+                                <figcaption>Rosa violeta</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	segundo	produto	-->
+                    <!--	terceiro	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/rosa-verde-esmeralda-DT.png" alt="miniatura3">
+                                <figcaption>Rosa verde esmeralda</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	terceiro	produto	-->
+                    <!--	quarto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_amarelo_coral_DT.png" alt="miniatura4">
+                                <figcaption>Rosa coral</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	quarto	produto	-->
+                    <!--	quinto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_amarelo_escuro_DT.png" alt="miniatura5">
+                                <figcaption>Rosa amarelo escuro</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	quinto	produto	-->
+                    <!--	sexto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_azul_ciam_DT.png" alt="miniatura6">
+                                <figcaption>Rosa azul cian</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	sexto	produto	-->
+                    <!--	setimo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_rosa_bebê_DT.png" alt="miniatura7">
+                                <figcaption>Rosa rosa bebe</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	setimo	produto	-->
+                    <!--	oitavo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_rosa_médio_DT.png" alt="miniatura8">
+                                <figcaption>Rosa rosa médio</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	oitavo	produto	-->
+                    <!--	nono	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Rosa_salmão_DT.png" alt="miniatura8">
+                                <figcaption>Rosa salmão</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	nono	produto	-->
+                </ul>
+            </section>
+            <!--	painel mais vendidos	-->
+            <section class="painel	mais-vendidos">
+                <h2><span style="vertical-align: 0.3em;">Linha Luxo</span></h2>
+                <ul>
+                    <!--	primeiro	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_amarelo_coral_D-removebg-preview.png" alt="miniatura1">
+                                <figcaption>Papoula Coral</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	primeiro	produto	-->
+                    <!--	segundo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_amarelo_laranja_D-removebg-preview.png" alt="miniatura2">
+                                <figcaption>Papoula laranja</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	segundo	produto	-->
+                    <!--	terceiro	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_amarelo_ouro_D-removebg-preview.png" alt="miniatura3">
+                                <figcaption>Papoula amarelo ouro</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	terceiro	produto	-->
+                    <!--	quarto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_azul_ciam_DPS.png" alt="miniatura4">
+                                <figcaption>Papoula azul ciam</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	quarto	produto	-->
+                    <!--	quinto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_azul_marinho_D-removebg-preview.png" alt="miniatura5">
+                                <figcaption>Papoula azul marinho</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	quinto	produto	-->
+                    <!--	sexto	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_Azul_Tiffany_Dbrilho aut.png" alt="miniatura6">
+                                <figcaption>Papoula azul tiffany</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	sexto	produto	-->
+                    <!--	setimo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_branca_DPSrgbaut.png" alt="miniatura7">
+                                <figcaption>Papoula branca</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	setimo	produto	-->
+                    <!--	oitavo	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Papoula_rosa_médio_D-removebg-preview.png" alt="miniatura8">
+                                <figcaption>Papoula rosa médio</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	oitavo	produto	-->
+                    <!--	nono	produto	-->
+                    <li>
+                        <a href="produto.html">
+                            <figure>
+                                <img src="imagens/Maracujá azul royal T.png" alt="miniatura9">
+                                <figcaption>Maracujá azul royal</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <!--	fim	do	nono	produto	-->
+                </ul>
+            </section>
+
+        </div>
+        <!--	fim	.container	.paineis	-->
 
 
 
